fixed header banner bug on tablet

--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -21,7 +21,7 @@
   &__container {
     @include flex-all-sb;
 
-    @include mobile {
+    @media (max-width: 710px) {
       flex-direction: column;
       justify-content: center;
     }
@@ -30,7 +30,7 @@
   &__left {
     max-width: 62.5%;
 
-    @include mobile {
+    @media (max-width: 710px) {
       text-align: center;
       max-width: 100%;
     }
@@ -56,9 +56,10 @@
       margin-bottom: 1.5rem;
     }
 
-    @include mobile {
+    @media (max-width: 710px) {
       margin: 0;
       margin-bottom: 0.5rem;
+      max-width: 40rem;
     }
 
     @include mobile-small {
